--- a/page-two.html
+++ b/page-two.html
@@ -6,7 +6,7 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="page-one.html">Page One</a></li>
+				<li><a href="index.html">Page One</a></li>
 				<li><a href="page-two.html">Page Two</a></li>
 				<li><a href="page-three.html">Page Three</a></li>
 			</ul>
