added alt attribute

--- a/page-three.html
+++ b/page-three.html
@@ -15,37 +15,37 @@
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/11227544_10205885288464259_8380498624490226118_o.jpg?_nc_cat=0&oh=a4a2c8d0067a0b7dc69e1f2e3a1287b8&oe=5B62AEF3"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/11227544_10205885288464259_8380498624490226118_o.jpg?_nc_cat=0&oh=a4a2c8d0067a0b7dc69e1f2e3a1287b8&oe=5B62AEF3" alt ="ice breaker"/>
 			<h2>Pic 1</h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1503881_10201943357238442_1549249457_n.jpg?_nc_cat=0&oh=04a17dc3f83ed3828afb5a3cc835296d&oe=5B30DE4A"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1503881_10201943357238442_1549249457_n.jpg?_nc_cat=0&oh=04a17dc3f83ed3828afb5a3cc835296d&oe=5B30DE4A" alt="running man"/>
 			<h2>Pic 2</h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1472877_10201943347958210_421306218_n.jpg?_nc_cat=0&oh=5721699716b04dd803b3a93256c68a33&oe=5B6DB5DC"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1472877_10201943347958210_421306218_n.jpg?_nc_cat=0&oh=5721699716b04dd803b3a93256c68a33&oe=5B6DB5DC" alt="bradford building"/>
 			<h2>Pic 3</h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1486804_10201943347038187_1277772351_n.jpg?_nc_cat=0&oh=1a6d7a5e6ee811f0b5796c7c68e86af9&oe=5B695A38"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1486804_10201943347038187_1277772351_n.jpg?_nc_cat=0&oh=1a6d7a5e6ee811f0b5796c7c68e86af9&oe=5B695A38" alt="blue sky"/>
 			<h2>Pic 4</h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1044691_10200772061836789_1531909662_n.jpg?_nc_cat=0&oh=332e76ac3fe413f44b148f9198112ead&oe=5B5AA29A"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/1044691_10200772061836789_1531909662_n.jpg?_nc_cat=0&oh=332e76ac3fe413f44b148f9198112ead&oe=5B5AA29A" alt="armley mills"/>
 			<h2>Pic 5</h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/62172_10200090398315627_1299141228_n.jpg?_nc_cat=0&oh=ad658d39a00c3d2e0d9a787f85667625&oe=5B6C92AC"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/62172_10200090398315627_1299141228_n.jpg?_nc_cat=0&oh=ad658d39a00c3d2e0d9a787f85667625&oe=5B6C92AC" alt="leeds eye"/>
 			<h2>Pic 6</h2>
 		</div>
 		
