--- a/page-two.html
+++ b/page-two.html
@@ -15,37 +15,37 @@
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/182126_3897228662079_2136857537_n.jpg?_nc_cat=0&oh=7a601ca8fbef0e7a0ef9af990a0eb29f&oe=5B5EF176"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/182126_3897228662079_2136857537_n.jpg?_nc_cat=0&oh=7a601ca8fbef0e7a0ef9af990a0eb29f&oe=5B5EF176" alt="queens hotel"/>
 			<h2></h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/487284_3858388211092_1799673738_n.jpg?_nc_cat=0&oh=961ae6dbc4a4405aac702d241fde7f97&oe=5B2C528D"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/487284_3858388211092_1799673738_n.jpg?_nc_cat=0&oh=961ae6dbc4a4405aac702d241fde7f97&oe=5B2C528D" alt="kirkstall abbey"/>
 			<h2></h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/580059_3710066343138_134829417_n.jpg?_nc_cat=0&oh=38592ea93f8db49d28fae158dab6e6df&oe=5B6EF28D"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/580059_3710066343138_134829417_n.jpg?_nc_cat=0&oh=38592ea93f8db49d28fae158dab6e6df&oe=5B6EF28D" alt ="watch"/>
 			<h2></h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/536097_3402702299229_1724693962_n.jpg?_nc_cat=0&oh=3dda94b9eb6a0c7d6c460e4de6102f88&oe=5B756EF5"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/536097_3402702299229_1724693962_n.jpg?_nc_cat=0&oh=3dda94b9eb6a0c7d6c460e4de6102f88&oe=5B756EF5" alt="corn exchange"/>
 			<h2></h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/575580_3402640457683_535140675_n.jpg?_nc_cat=0&oh=43e589d44794cb0ae9db1060eeec9c42&oe=5B2D5ADB"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/575580_3402640457683_535140675_n.jpg?_nc_cat=0&oh=43e589d44794cb0ae9db1060eeec9c42&oe=5B2D5ADB" alt="leeds docks"/>
 			<h2></h2>
 		</div>
 		
 		<div class="card">
 			<a href="https://www.facebook.com/">
-			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/333892_2748735390465_1298389338_o.jpg?_nc_cat=0&oh=015bf80d9f6f3989f3763923eb6c16ec&oe=5B6F679A"/>
+			<img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/333892_2748735390465_1298389338_o.jpg?_nc_cat=0&oh=015bf80d9f6f3989f3763923eb6c16ec&oe=5B6F679A" alt="cross roads"/>
 			<h2></h2>
 		</div>
 		
